--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SmartExpenseTrackerApp</string>
+    <string name="home_welcome">Welcome to Smart Expense Tracker App</string>
+    <string name="add_expense">Add Expense</string>
+
 </resources>
